add_executable(TextDungeon
        main.cpp
        room/room.cpp
        room/room.h
        entity/entity.cpp
        entity/entity.h
        listener/input_listener.cpp
        listener/input_listener.h
        game.cpp
        render/renderable.cpp
        render/renderable.h
        component/component.h
        component/position_component.cpp
        component/position_component.h
        system/system.h
        system/input_system.cpp
        system/input_system.h)