add_executable(TextDungeon
        main.cpp
        component/room_component.cpp
        component/room_component.h
        entity/entity.cpp
        entity/entity.h
        game.cpp
        component/render_component.cpp
        component/render_component.h
        component/component.h
        component/position_component.cpp
        component/position_component.h
        system/system.h
        system/input_system.cpp
        system/input_system.h
        component/screen/menu_component.h
        component/screen/menu_component.cpp
        component/room_component.cpp
        manager/room_manager.cpp
        manager/room_manager.h
        component/component.cpp)